[gd_scene load_steps=5 format=3 uid="uid://bvmbwgtyrurwg"]

[ext_resource type="Script" path="res://scenes/elements/enemy_number/enemy_number.gd" id="1_hn6lj"]
[ext_resource type="FontFile" uid="uid://ca0coy5ar1nni" path="res://assets/fonts/AGENCYR.TTF" id="2_k3t2k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxp8b"]
size = Vector2(22, 22)

[sub_resource type="LabelSettings" id="LabelSettings_xfycl"]
font = ExtResource("2_k3t2k")
font_size = 12

[node name="EnemyNumber" type="Area2D"]
script = ExtResource("1_hn6lj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -11.0
offset_top = -11.0
offset_right = 11.0
offset_bottom = 11.0
color = Color(1, 1, 1, 0.0784314)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_uxp8b")

[node name="VisibleNumber" type="Label" parent="."]
texture_filter = 1
offset_left = -138.0
offset_top = -12.0
offset_right = 138.0
offset_bottom = 13.0
text = "..."
label_settings = SubResource("LabelSettings_xfycl")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
